--- a/app/src/main/res/layout/dialog_time_off.xml
+++ b/app/src/main/res/layout/dialog_time_off.xml
@@ -35,12 +35,12 @@
                     android:layout_marginTop="@dimen/_21sdp"
                     android:switchMinWidth="@dimen/_50sdp"
                     android:thumb="@drawable/switch_thumb_selector"
-                    android:track="@drawable/switch_track_selector" />
+                    android:track="@drawable/switch_track_selector"/>
 
             <LinearLayout
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="match_parent"
+                    android:layout_width="378dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/_35sdp"
                     android:orientation="horizontal">
 
@@ -51,13 +51,13 @@
                     <RadioButton
                             android:id="@+id/rB_15"
                             android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp"/>
+                            android:layout_height="@dimen/_20sdp" />
 
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_20sdp"
                             android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_marginTop="@dimen/_20sdp"
                             android:text="15'"
                             android:textSize="@dimen/_12sdp" />
                 </RelativeLayout>
@@ -75,13 +75,13 @@
                     <RadioButton
                             android:id="@+id/rB_30"
                             android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp"/>
+                            android:layout_height="@dimen/_20sdp" />
 
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_20sdp"
                             android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_marginTop="@dimen/_20sdp"
                             android:text="30'"
                             android:textSize="@dimen/_12sdp" />
                 </RelativeLayout>
@@ -99,7 +99,7 @@
                     <RadioButton
                             android:id="@+id/rB_60"
                             android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp"/>
+                            android:layout_height="@dimen/_20sdp" />
 
                     <TextView
                             android:layout_width="wrap_content"
@@ -122,7 +122,7 @@
                     <RadioButton
                             android:id="@+id/rB_120"
                             android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp"/>
+                            android:layout_height="@dimen/_20sdp" />
 
                     <TextView
                             android:layout_width="wrap_content"
