--- a/app/src/main/res/layout/dialog_time_off.xml
+++ b/app/src/main/res/layout/dialog_time_off.xml
@@ -2,14 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/curve_time_off"
+        android:layout_height="match_parent"
         app:cardCornerRadius="@dimen/_20sdp">
 
     <RelativeLayout
+            android:layout_marginRight="@dimen/_20sdp"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_centerInParent="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00FFFFFF"
+            android:background="@drawable/curve_time_off"
             android:padding="@dimen/_15sdp">
 
         <LinearLayout
@@ -38,101 +40,105 @@
                     android:track="@drawable/switch_track_selector"/>
 
             <LinearLayout
-                    android:layout_width="378dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/_35sdp"
-                    android:orientation="horizontal">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <LinearLayout
+                        android:layout_width="378dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:orientation="horizontal">
 
-                <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                    <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
 
-                    <RadioButton
-                            android:id="@+id/rB_15"
-                            android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp" />
+                        <RadioButton
+                                android:id="@+id/rB_15"
+                                android:layout_width="@dimen/_20sdp"
+                                android:layout_height="@dimen/_20sdp" />
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:layout_marginTop="@dimen/_20sdp"
+                                android:text="15'"
+                                android:textSize="@dimen/_12sdp" />
+                    </RelativeLayout>
 
                     <TextView
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_1sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
+                            android:background="#000" />
+
+                    <RelativeLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_marginTop="@dimen/_20sdp"
-                            android:text="15'"
-                            android:textSize="@dimen/_12sdp" />
-                </RelativeLayout>
+                            android:layout_height="wrap_content">
 
-                <TextView
-                        android:layout_width="@dimen/_65sdp"
-                        android:layout_height="@dimen/_1sdp"
-                        android:layout_marginTop="@dimen/_6sdp"
-                        android:background="#000" />
+                        <RadioButton
+                                android:id="@+id/rB_30"
+                                android:layout_width="@dimen/_20sdp"
+                                android:layout_height="@dimen/_20sdp" />
 
-                <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                    <RadioButton
-                            android:id="@+id/rB_30"
-                            android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp" />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:layout_marginTop="@dimen/_20sdp"
+                                android:text="30'"
+                                android:textSize="@dimen/_12sdp" />
+                    </RelativeLayout>
 
                     <TextView
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_1sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
+                            android:background="#000" />
+
+                    <RelativeLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_marginTop="@dimen/_20sdp"
-                            android:text="30'"
-                            android:textSize="@dimen/_12sdp" />
-                </RelativeLayout>
+                            android:layout_height="wrap_content">
 
-                <TextView
-                        android:layout_width="@dimen/_65sdp"
-                        android:layout_height="@dimen/_1sdp"
-                        android:layout_marginTop="@dimen/_6sdp"
-                        android:background="#000" />
+                        <RadioButton
+                                android:id="@+id/rB_60"
+                                android:layout_width="@dimen/_20sdp"
+                                android:layout_height="@dimen/_20sdp" />
 
-                <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                    <RadioButton
-                            android:id="@+id/rB_60"
-                            android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp" />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/_20sdp"
+                                android:text="60'"
+                                android:textSize="@dimen/_12sdp" />
+                    </RelativeLayout>
 
                     <TextView
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_1sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
+                            android:background="#000" />
+
+                    <RelativeLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_20sdp"
-                            android:text="60'"
-                            android:textSize="@dimen/_12sdp" />
-                </RelativeLayout>
+                            android:layout_height="wrap_content">
 
-                <TextView
-                        android:layout_width="@dimen/_65sdp"
-                        android:layout_height="@dimen/_1sdp"
-                        android:layout_marginTop="@dimen/_6sdp"
-                        android:background="#000" />
+                        <RadioButton
+                                android:id="@+id/rB_120"
+                                android:layout_width="@dimen/_20sdp"
+                                android:layout_height="@dimen/_20sdp" />
 
-                <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                    <RadioButton
-                            android:id="@+id/rB_120"
-                            android:layout_width="@dimen/_20sdp"
-                            android:layout_height="@dimen/_20sdp" />
-
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_20sdp"
-                            android:text="120'"
-                            android:textSize="@dimen/_12sdp" />
-                </RelativeLayout>
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/_20sdp"
+                                android:text="120'"
+                                android:textSize="@dimen/_12sdp" />
+                    </RelativeLayout>
 
 
+                </LinearLayout>
             </LinearLayout>
 
             <EditText
