--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,7 @@
             android:background="#00000000">
 
         <TextView
+            android:id="@+id/mTVTest"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
