--- a/app/src/main/res/layout/list_item_playlist.xml
+++ b/app/src/main/res/layout/list_item_playlist.xml
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="19dp"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical"
-            >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/img_playlist"
-                android:layout_width="155dp"
-                android:layout_height="135dp"
-                android:background="#3F51B5"
-                android:scaleType="fitXY"
-                app:riv_corner_radius="20dp"
-                app:riv_mutate_background="true"
-                android:src="@drawable/maxresdefault"/>
+            android:id="@+id/img_playlist"
+            android:layout_width="155dp"
+            android:layout_height="135dp"
+            android:background="#3F51B5"
+            android:scaleType="fitXY"
+            android:src="@drawable/maxresdefault"
+            app:riv_corner_radius="20dp"
+            app:riv_mutate_background="true" />
 
         <TextView
-                android:id="@+id/txt_nameSong"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/img_playlist"
-                android:layout_marginTop="5dp"
-                android:hint="Tổng Hợp Lê Bảo Bình"
-                android:textColor="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:textSize="14sp"
-                android:gravity="center"/>
+            android:id="@+id/txt_nameSong"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_playlist"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:hint="Tổng Hợp Lê Bảo Bình"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
